Fix for issue #311 (messages overflowing their containers when long strings are present)

--- a/pylowiki/public/styles/civ.css
+++ b/pylowiki/public/styles/civ.css
@@ -100,6 +100,10 @@ html,body{
     min-width: 70px;
 }
 
+.message-content{
+    max-width:680px;
+}
+
 .fullWidth{ width:100%; }
 
 .horizontal-list> li {
